# ps_2_ex3_database

./: .gitignore  .pre-commit-config.yaml  NBA_findings.ipynb  README.md  environment.yml  pyproject.toml  warm_up.ipynb
nba/: data_loader.py
